--- a/element/navbar.yml
+++ b/element/navbar.yml
@@ -14,7 +14,7 @@ innerHTML:
       class: navbar-toggler
       type: button
       data-toggle: collapse
-      data-target: #navbarSupportedContent
+      data-target: rs:data-target
       aria-controls: navbarSupportedContent
       aria-expanded: false
       aria-label: Toggle navigation
@@ -27,7 +27,7 @@ innerHTML:
     type: div
     attribute:
       class: collapse navbar-collapse
-      id: navbarSupportedContent
+      id: rs:id
     innerHTML:
       -
         type: div
