--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
-version: '1.2'
+version: '1.3'
 history:
+  '1.3':
+    date: '2018-12-11'
+    description: 'Add settings to elements.'
   '1.2':
     date: '2018-12-10'
     description: 'Set brand href and onclick.'
