--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,8 @@
-version: '1.3'
+version: '1.4'
 history:
+  '1.4':
+    date: '2019-01-21'
+    description: 'Add attribute/target support.'
   '1.3':
     date: '2018-12-11'
     description: 'Add settings to elements.'
