--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: '1.7'
+version: '1.8'
 history:
+  '1.8':
+    date: '2019-10-10'
+    title: Style
+    description: 'Set style on link.'
   '1.7':
     date: '2019-10-09'
     description: 'Add param item_method.'
