--- a/element/navbar.yml
+++ b/element/navbar.yml
@@ -1,6 +1,6 @@
 type: nav
 attribute:
-  class: navbar navbar-expand-lg navbar-light bg-light
+  class: navbar navbar-expand-sm navbar-light bg-light
 innerHTML:
   -
     type: a
