--- a/manifest.yml
+++ b/manifest.yml
@@ -1,35 +1,39 @@
-version: '1.9'
+version: '1.10.0'
 history:
-  '1.9':
+  '1.10.0':
+    date: '2019-11-21'
+    title: Attribute and Settings
+    description: 'Add param attribute and settings to item.'
+  '1.9.0':
     date: '2019-10-11'
     title: Expand navbar
     description: 'Navbar expand on small devices.'
-  '1.8':
+  '1.8.0':
     date: '2019-10-10'
     title: Style
     description: 'Set style on link.'
-  '1.7':
+  '1.7.0':
     date: '2019-10-09'
     description: 'Add param item_method.'
-  '1.6':
+  '1.6.0':
     date: '2019-05-08'
     description: 'Add items right align.'
-  '1.5':
+  '1.5.0':
     date: '2019-03-26'
     description: 'Add type text in navbar and dropdown.'
-  '1.4':
+  '1.4.0':
     date: '2019-01-21'
     description: 'Add attribute/target support.'
-  '1.3':
+  '1.3.0':
     date: '2018-12-11'
     description: 'Add settings to elements.'
-  '1.2':
+  '1.2.0':
     date: '2018-12-10'
     description: 'Set brand href and onclick.'
-  '1.1':
+  '1.1.0':
     date: '2018-12-10'
     description: 'Generate id if not exist.'
-  '1.0':
+  '1.0.0':
     date: '2018-12-10'
     description: 'First version.'
 plugin:
