--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: '1.11.0'
+version: '1.11.1'
 history:
+  '1.11.1':
+    date: '2020-05-02'
+    title: Readme
+    description: 'Readme improvement.'
   '1.11.0':
     date: '2019-12-23'
     title: Link class
