--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.11.3
+version: 1.12.0
 history:
+  1.12.0:
+    date: '2021-03-12'
+    title: Brand
+    description: 'Using menu without brand param. If param empty nothing shows up.'
   1.11.3:
     date: '2020-10-22'
     title: Readme
