--- a/element/link.yml
+++ b/element/link.yml
@@ -1,6 +1,20 @@
 type: a
+settings: rs:settings
 attribute: 
   class: nav-link
   href: '#'
   style: rs:style
-innerHTML: Link
+innerHTML: 
+  -
+    type: widget
+    settings:
+      enabled: rs:icon
+    data:
+      plugin: icons/bootstrap_v1_8_1
+      method: icon
+      data:
+        icon: rs:icon
+        style: 'margin-right:4px;margin-top:-4px'
+  -
+    type: span
+    innerHTML: rs:text
