--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.14.0
+version: 1.14.1
 history:
+  1.14.1:
+    date: '2022-05-12'
+    title: Versions
+    description: 'Versions update.'
   1.14.0:
     date: '2021-05-10'
     title: Icons
@@ -67,13 +71,13 @@ history:
 plugin:
   -
     name: wf/array
-    version: 1.2.0
+    version: 1.2.3
   -
     name: wf/yml
-    version: 1.3.0
+    version: 1.3.1
   -
     name: icons/bootstrap_v1_8_1
-    version: 1.0.0
+    version: 1.1.0
 sys:
   -
     name: mercury
