--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.15.1
+version: 1.16.0
 history:
+  1.16.0:
+    date: '2022-07-22'
+    title: Link method
+    description: 'Add link_method.'
   1.15.1:
     date: '2022-06-07'
     title: Versions
