--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,12 @@
-version: 1.16.0
+version: 1.16.1
 history:
+  1.16.1:
+    date: '2022-09-27'
+    title: Versions
+    description: 'Versions update.'
   1.16.0:
     date: '2022-07-22'
-    title: Link method
+    title: 'Link method'
     description: 'Add link_method.'
   1.15.1:
     date: '2022-06-07'
@@ -83,13 +87,13 @@ history:
 plugin:
   -
     name: wf/array
-    version: 1.2.3
+    version: 1.2.4
   -
     name: wf/yml
-    version: 1.4.0
+    version: 1.5.0
   -
     name: icons/bootstrap_v1_8_1
-    version: 1.1.0
+    version: 1.1.1
 sys:
   -
     name: mercury
