--- a/element/item.yml
+++ b/element/item.yml
@@ -41,6 +41,7 @@
         id: navbarDropdown
         role: button
         data-toggle: dropdown
+        data-bs-toggle: dropdown
         aria-haspopup: true
         aria-expanded: false
       innerHTML: Dropdown
