--- a/element/link_dropdown.yml
+++ b/element/link_dropdown.yml
@@ -5,6 +5,7 @@ attribute:
   id: navbarDropdown
   role: button
   data-toggle: dropdown
+  data-bs-toggle: dropdown
   aria-haspopup: true
   aria-expanded: false
 innerHTML:
