--- a/element/navbar.yml
+++ b/element/navbar.yml
@@ -3,73 +3,80 @@ attribute:
   class: navbar navbar-expand-sm navbar-light bg-light
 innerHTML:
   -
-    type: a
-    settings:
-      enabled: rs:brand
-    attribute:
-      class: navbar-brand
-      href: 'rs:brand_href'
-      onclick: 'rs:brand_onclick'
-    innerHTML: rs:brand
-  -
-    type: button
-    attribute: 
-      class: navbar-toggler
-      type: button
-      data-toggle: collapse
-      data-target: rs:data-target
-      aria-controls: navbarSupportedContent
-      aria-expanded: false
-      aria-label: Toggle navigation
-    innerHTML:
-      -
-        type: span
-        attribute:
-          class: navbar-toggler-icon
-  -
     type: div
-    attribute:
-      class: collapse navbar-collapse
-      id: rs:id
-    innerHTML:
+    attribute: 
+      class: container-fluid
+    innerHTML: 
       -
-        type: div
-        innerHTML: rs:element_before
-      -
-        type: ul
-        attribute:
-          class: navbar-nav mr-auto
-        innerHTML: rs:item
-      -
-        type: ul
+        type: a
         settings:
-          enabled: true
+          enabled: rs:brand
         attribute:
-          class: navbar-nav
-        innerHTML: rs:item_right
+          class: navbar-brand
+          href: 'rs:brand_href'
+          onclick: 'rs:brand_onclick'
+        innerHTML: rs:brand
       -
-        type: div
-        innerHTML: rs:element_after
-      -
-        type: form
-        settings:
-          disabled: true
-        attribute:
-          class: form-inline my-2 my-lg-0
+        type: button
+        attribute: 
+          class: navbar-toggler
+          type: button
+          data-toggle: collapse
+          data-bs-toggle: collapse
+          data-target: rs:data-target
+          data-bs-target: rs:data-target
+          aria-controls: navbarSupportedContent
+          aria-expanded: false
+          aria-label: Toggle navigation
         innerHTML:
           -
-            type: input
-            attribute: 
-              class: form-control mr-sm-2
-              type: search
-              placeholder: Search
-              aria-label: Search
-          -
-            type: button
+            type: span
             attribute:
-              class: btn btn-outline-success my-2 my-sm-0
-              type: submit
-            innerHTML: Search
+              class: navbar-toggler-icon
+      -
+        type: div
+        attribute:
+          class: collapse navbar-collapse
+          id: rs:id
+        innerHTML:
+          -
+            type: div
+            innerHTML: rs:element_before
+          -
+            type: ul
+            attribute:
+              class: navbar-nav mr-auto
+            innerHTML: rs:item
+          -
+            type: ul
+            settings:
+              enabled: true
+            attribute:
+              class: navbar-nav
+            innerHTML: rs:item_right
+          -
+            type: div
+            innerHTML: rs:element_after
+          -
+            type: form
+            settings:
+              disabled: true
+            attribute:
+              class: form-inline my-2 my-lg-0
+            innerHTML:
+              -
+                type: input
+                attribute: 
+                  class: form-control mr-sm-2
+                  type: search
+                  placeholder: Search
+                  aria-label: Search
+              -
+                type: button
+                attribute:
+                  class: btn btn-outline-success my-2 my-sm-0
+                  type: submit
+                innerHTML: Search
   
 
 
