--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.16.1
+version: 1.17.0
 history:
+  1.17.0:
+    date: '2023-03-22'
+    title: Bootstrap
+    description: 'Add support for version 5 along with version 4.'
   1.16.1:
     date: '2022-09-27'
     title: Versions
