--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.17.0
+version: 1.18.0
 history:
+  1.18.0:
+    date: '2023-04-13'
+    title: Background
+    description: 'Add param data/data/bg to change background from light.'
   1.17.0:
     date: '2023-03-22'
     title: Bootstrap
