--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.19.1
+version: 1.19.2
 history:
+  1.19.2:
+    date: '2023-06-22'
+    title: Navbar toggler
+    description: 'Align to right.'
   1.19.1:
     date: '2023-06-05'
     title: Item right
