--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,9 @@
-version: 1.20.1
+version: 1.20.2
 history:
+  1.20.2:
+    date: '2023-09-27'
+    title: Versions
+    description: 'Versions update.'
   1.20.1:
     date: '2023-09-11'
     title: Versions
@@ -115,13 +119,13 @@ history:
 plugin:
   -
     name: wf/array
-    version: 1.5.0
+    version: 1.5.1
   -
     name: wf/yml
-    version: 1.8.0
+    version: 1.8.1
   -
     name: icons/bootstrap_v1_8_1
-    version: 1.2.1
+    version: 1.3.1
 sys:
   -
     name: mercury
